Revision history for Catalyst-Controller-DBIC-API: {{ $dist->version }}

{{ $NEXT }}

- Added has_errors method
- Fixed tests to succeed with newer DBIx::Class versions

2.003001  2011-02-16 17:52:37 Europe/Vienna

- Use JSON instead of JSON::Any to get rid of the CPAN Testers failures
  when only JSON::Syck is available

2.002004  2011-01-13 19:22:20 Europe/Vienna

- Renamed Visitor to Validator::Visitor to conform with Data::DPath::Validator
  and moved it into a separate file.
- Fixed failure because of Data::DPath >=0.41 by not using
  MooseX::Role::BuildInstanceOf for the validator attributes (RT#64673)
- Added result_class and stash_key attributes to Catalyst::Controller::DBIC::API,
  allowing the values of them to be derived from the controller configuration (RT#63686)

2.002003  2010-09-16 10:44:40 Europe/Vienna

- Added REST and RPC delete_bulk tests
- Fixed RPC delete_bulk not working at all
- Added REST and RPC update_bulk tests
- Removed useless RPC index action
- Fixed static configured page attribute not being used (RT#56226)
- Test use_json_boolean true
- Fixed search attribute generation for nonexistent relationships
- Remove trailing newlines from error messages

2.002002  2010-08-03 14:40:50 Europe/Vienna

- Fixed search for related columns overwriting existing params in generate_column_parameters
- Use column accessor for updating an existing object instead of passing the new values to update.
  This enables the column accessors to do additional work (for example with method modifiers).
- Fixed t/rpc/list.t error message regex to pass with Moose version >=1.05
- Fixed pod coverage and added a test for it

2.002001  2010-04-01 01:41:11 Europe/Berlin

- Remove debugging code and other noise from tests
- Fixed some typos and code cleanups
- Added possibility to fetch a single object by id + tests using 'item'
- Added item_root attribute which defaults to 'data' and is used as data root for 'item'