@@ -4,6 +4,7 @@ Revision history for Catalyst-Controller-DBIC-API: {{ $dist->version }}
 
 - Added has_errors method
 - Fixed tests to succeed with newer DBIx::Class versions
+- Fixed controller instantiation failures with Moose 2 in relation to prefetch
 
 2.003001  2011-02-16 17:52:37 Europe/Vienna
 
